# libssh

./: CMakeLists.txt
cmake/Modules/: DefineCompilerFlags.cmake  DefineInstallationPaths.cmake
include/libssh/: CMakeLists.txt
src/: CMakeLists.txt  sftp.c
